# Codex-Session-Manger

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.cjs  vite.config.ts
.github/workflows/: build-windows.yml
docs/superpowers/plans/: 2026-06-12-codex-session-manager-implementation.md
docs/superpowers/specs/: 2026-06-12-codex-session-manager-design.md
fixtures/codex-home/: session_index.jsonl
fixtures/codex-home/sessions/2026/06/12/: rollout-2026-06-12T01-02-03-11111111-1111-4111-8111-111111111111.jsonl  rollout-2026-06-12T04-05-06-22222222-2222-4222-8222-222222222222.jsonl
src/: App.tsx  api.ts  sessionFilters.test.ts  sessionFilters.ts  sessionIdentity.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  deletion.rs  errors.rs  jsonl.rs  lib.rs  main.rs  models.rs  paths.rs  process.rs  scanner.rs  test_fixtures.rs
src/components/: App.test.tsx  DeletePreviewDialog.tsx  ProjectSidebar.tsx  SessionDetails.tsx  SessionTable.tsx
