[package]
name = "codex-session-manager"
version = "0.1.0"
description = "Portable Windows session manager for Codex App"
authors = ["Codex Session Manager"]
license = "MIT"
edition = "2021"

[lib]
name = "codex_session_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# time 0.3.48 conflicts with tauri-utils 2.9.2 on the current Windows runner.
time = { version = "=0.3.47", features = ["formatting", "macros", "serde"] }
walkdir = "2"
tempfile = "3"

[dev-dependencies]
assert_fs = "1"
